config/network-policy/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: sproozi
    app.kubernetes.io/managed-by: kustomize
  name: default-deny-ingress
  namespace: system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
